--- a/css01.html
+++ b/css01.html
@@ -191,6 +191,6 @@
       <a href="www.google.com">Google</a><br><br>
       <a href="www.google.com">Google</a><br><br>
     </div>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore ullam recusandae repudiandae magnam libero aspernatur fuga temporibus animi dolorem! Molestiae exercitationem voluptatum magni odit commodi tempore corrupti non dignissimos quam!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore ullam recusandae repudiandae magnam libero aspernatur fuga temporibus animi dolorem! Molestiae exercitationem voluptatum magni odit commodi tempore corrupti non dignissimos</p>
   </body>
 </html>
